k8s-manifests/openbao/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/component: secrets
    app.kubernetes.io/part-of: infra
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - vault.server2.home
  rules:
    - backendRefs:
        - name: openbao
          namespace: openbao
          port: 8200
